--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,17 +13,13 @@
 
 		</div>
 		<div class="col-sm-4">
-		  Funding:<br />
-      - StG and CoG from the <a href="https://erc.europa.eu">ERC</a><br />
-		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
-		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
 		  Engineering building, Hunan University<br />
-		  2333 CA Leiden<br />
+		  Changsha Hunan Province<br />
 		  China <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
+            (<a href="https://www.google.nl/maps/place/Hunan+University/@28.1789197,112.9413751,17z/data=!3m1!4b1!4m6!3m5!1s0x34274b1a3aa36525:0x28cc5b7f70a8f9aa!8m2!3d28.178915!4d112.94395!16zL20vMDJsaHp5?hl=en&entry=ttu">Maps</a>)
 		</div>
 	  </div>
 	</div>
