--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -5,7 +5,7 @@ layout: default
 	<div class="col-sm-12">
 				<img src="{{ site.url }}{{ site.baseurl }}/images/cover_photo.jpg" alt="cover" style="width:100%;">
 				<div class="centered" style="width:70%;"> 
-					<h2 style="color:white; opacity: 1.0; font-family: Comic Sans MS;">Learning and Sensing for Dynamics Lab </h2>
+				  <h2 style="color:white; opacity: 1.0; font-family: Comic Sans MS;">Chao Zhang's group @ Hunan University </h2>
 				</div>
 	</div>
 
@@ -13,6 +13,4 @@ layout: default
 	<div  class="col-sm-9" align="justify">
 				{{ content }}
   </div>
-	<div id="newsid" class="col-sm-3" align="justify" >
-	{% include news.html %}
-  </div>
+
