--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -9,3 +9,6 @@ layout: default
 
 	<div  class="col-sm-9" align="justify">
 				{{ content }}
+  	<div id="newsid" class="col-sm-4" >
+		{% include news.html %}
+  	</div>
