--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-  <div id="homeid" class="col-sm-8">
-	{{ content }}
-  </div>
+
+	<div  class="col-sm-12" align="justify">
+				{{ content }}
