--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,5 +3,8 @@ layout: default
 ---
 
 
-<div  class="col-sm-12" align="justify">
-	{{ content }}
+<div id="homeid" class="col-sm-12">
+	<h1></h1>
+
+{{ content }}
+</div>
