--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -2,9 +2,8 @@
 layout: default
 ---
 
+  <div id="homeid" class="col-sm-8">
+        <h1>Welcome to the UNSAT</h1>
 
-<div id="homeid" class="col-sm-12">
-	<h1></h1>
-
-{{ content }}
-</div>
+	{{ content }}
+  </div>
