--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,36 @@
   {% include head.html %}
 
   <body>
-
+    
     {% include header.html %}
+    
+    <div markdown="0" id="carousel" class="carousel slide" data-ride="carousel" data-interval="4000" data-pause="hover" >
+      <!-- Menu -->
+      <ol class="carousel-indicators">
+          <li data-target="#carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel" data-slide-to="1"></li>
+      </ol>
+  
+      <!-- Items -->
+      <div class="carousel-inner" markdown="0">
+          <div class="item active">
+              <img src="https://chaozhanghnu.github.io/images/cover_photo.jpg" alt="Slide 1" />
+          </div>
+          <div class="item">
+              <img src="https://chaozhanghnu.github.io/images/direction1.png" alt="Slide 2" />
+          </div>
+      </div>
+    <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  
+
 
     <div class="container-fluid">
       <div class="row">
