--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -1,6 +1,6 @@
 ---
-layout: default2
+layout: default
 ---
-<div id="homeid" class="col-sm-8">
+<div id="homeid" class="col-sm-12">
 	{{ content }}
 </div>
