--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,33 +6,33 @@
   <body>
     
     {% include header.html %}
-    
-    <div markdown="0" id="carousel" class="carousel slide" data-ride="carousel" data-interval="4000" data-pause="hover" >
-      <!-- Menu -->
+
+    <div id="myCarousel" class="carousel slide">
+      <!-- 轮播（Carousel）指标 -->
       <ol class="carousel-indicators">
-          <li data-target="#carousel" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel" data-slide-to="1"></li>
-      </ol>
-  
-      <!-- Items -->
-      <div class="carousel-inner" markdown="0">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>   
+      <!-- 轮播（Carousel）项目 -->
+      <div class="carousel-inner">
           <div class="item active">
-              <img src="https://chaozhanghnu.github.io/images/cover_photo.jpg" alt="Slide 1" />
+              <img decoding="async" src="https://chaozhanghnu.github.io/images/cover_photo.jpg" alt="First slide">
           </div>
           <div class="item">
-              <img src="https://chaozhanghnu.github.io/images/direction1.png" alt="Slide 2" />
+              <img decoding="async" src="https://chaozhanghnu.github.io/images/cover_photo.jpg" alt="Second slide">
+          </div>
+          <div class="item">
+              <img decoding="async" src="https://chaozhanghnu.github.io/images/direction1.png" alt="Third slide">
           </div>
       </div>
-    <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+      <!-- 轮播（Carousel）导航 -->
+      <a class="carousel-control left" href="#myCarousel" 
+         data-slide="prev"> <span _ngcontent-c3="" aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span></a>
+      <a class="carousel-control right" href="#myCarousel" 
+         data-slide="next">&rsaquo;</a>
   </div>
-  
+    
 
 
     <div class="container-fluid">
