--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -1,11 +1,9 @@
 ---
 layout: default
 ---
-　<link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
 
 <div id="homeid" class="col-sm-12">
@@ -28,7 +26,9 @@ layout: default
 				<img decoding="async" src="https://chaozhanghnu.github.io/images/direction1.png" alt="Third slide">
 			</div>
 		</div>
-	</div>
-  
+	</div>	
+</div>
+
+<div id="homeid" class="col-sm-12">
 	{{ content }}
 </div>
