--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,8 +3,22 @@ layout: default
 --
 
 <div id="homeid" class="col-sm-12">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+	<div id="myCarousel" class="carousel slide">
+		<!-- 轮播（Carousel）指标 -->
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+		</ol>   
+		<!-- 轮播（Carousel）项目 -->
+		<div class="carousel-inner">
+			<div class="item active">
+				<img decoding="async" src="https://chaozhanghnu.github.io/images/direction1.png" alt="First slide">
+			</div>
+			<div class="item">
+				<img decoding="async" src="https://chaozhanghnu.github.io/images/direction1.png" alt="Third slide">
+			</div>
+		</div>
+	</div>	
+
 	{{ content }}
 </div>
