--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -2,7 +2,8 @@
 <html>
 
   {% include head.html %}
-
+  
+  
   <body>
 
     {% include header.html %}
@@ -13,7 +14,10 @@
       </div>
     </div>
 
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+  
   </body>
 
 </html>
