--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -1,9 +1,6 @@
 ---
-layout: default
+layout: default2
 --
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
 <div id="homeid" class="col-sm-12">
 	<div id="myCarousel" class="carousel slide">
