--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -1,7 +1,9 @@
 ---
-layout: default2
---
+layout: default
+---
 
-<div id="homeid" class="col-sm-12">
+  <div id="homeid" class="col-sm-8">
+        <h1></h1>
+
 	{{ content }}
-</div>
+  </div>
