--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+　<link href="https://chaozhanghnu.github.io/css/main.scss" rel="stylesheet">
+    <script src="https://chaozhanghnu.github.io/js/bootstrap.min.js"></script>
 
   <div id="homeid" class="col-sm-12">
         <h1></h1>
