--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -6,44 +6,38 @@ layout: default
 
   <div id="homeid" class="col-sm-12">
         <h1></h1>
-		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+		<div id="myCarousel" class="carousel slide">
+			<!-- 轮播（Carousel）指标 -->
 			<ol class="carousel-indicators">
-			  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-			  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-			  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-			</ol>
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+			</ol>   
+			<!-- 轮播（Carousel）项目 -->
 			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img src="https://chaozhanghnu.github.io/images/direction3.png" class="d-block w-100" alt="...">
-				<div class="carousel-caption d-none d-md-block">
-				  <h5>First slide label</h5>
-				  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+				<div class="item active">
+					<img src="/wp-content/uploads/2014/07/slide1.png" alt="First slide">
+					<div class="carousel-caption">标题 1</div>
 				</div>
-			  </div>
-			  <div class="carousel-item">
-				<img src="https://chaozhanghnu.github.io/images/direction3.png" class="d-block w-100" alt="...">
-				<div class="carousel-caption d-none d-md-block">
-				  <h5>Second slide label</h5>
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				<div class="item">
+					<img src="/wp-content/uploads/2014/07/slide2.png" alt="Second slide">
+					<div class="carousel-caption">标题 2</div>
 				</div>
-			  </div>
-			  <div class="carousel-item">
-				<img src="https://chaozhanghnu.github.io/images/direction3.png" class="d-block w-100" alt="...">
-				<div class="carousel-caption d-none d-md-block">
-				  <h5>Third slide label</h5>
-				  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+				<div class="item">
+					<img src="/wp-content/uploads/2014/07/slide3.png" alt="Third slide">
+					<div class="carousel-caption">标题 3</div>
 				</div>
-			  </div>
 			</div>
-			<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Previous</span>
+			<!-- 轮播（Carousel）导航 -->
+			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
 			</a>
-			<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Next</span>
+			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
 			</a>
-		  </div>
-		
+		</div> 
+			
 	{{ content }}
   </div>
