--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 　<link href="https://chaozhanghnu.github.io/css/main.scss" rel="stylesheet">
-    <script src="https://chaozhanghnu.github.io/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
   <div id="homeid" class="col-sm-12">
         <h1></h1>
