--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -17,15 +17,15 @@ layout: default
 			<!-- 轮播（Carousel）项目 -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="/wp-content/uploads/2014/07/slide1.png" alt="First slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction3" alt="First slide">
 					<div class="carousel-caption">标题 1</div>
 				</div>
 				<div class="item">
-					<img src="/wp-content/uploads/2014/07/slide2.png" alt="Second slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction3" alt="Second slide">
 					<div class="carousel-caption">标题 2</div>
 				</div>
 				<div class="item">
-					<img src="/wp-content/uploads/2014/07/slide3.png" alt="Third slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction3" alt="Third slide">
 					<div class="carousel-caption">标题 3</div>
 				</div>
 			</div>
