--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -18,15 +18,15 @@ layout: default
 			<div class="carousel-inner">
 				<div class="item active">
 					<img src="https://chaozhanghnu.github.io/images/slides/direction3.png" alt="First slide">
-					<div class="carousel-caption">标题 1</div>
+					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides/direction3.png" alt="Second slide">
-					<div class="carousel-caption">标题 2</div>
+					<img src="https://chaozhanghnu.github.io/images/slides/direction1.jpg" alt="Second slide">
+					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
 					<img src="https://chaozhanghnu.github.io/images/slides/direction3.png" alt="Third slide">
-					<div class="carousel-caption">标题 3</div>
+					<div class="carousel-caption"></div>
 				</div>
 			</div>
 			<!-- 轮播（Carousel）导航 -->
