--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -17,7 +17,7 @@ layout: default
 			<!-- 轮播（Carousel）项目 -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="https://chaozhanghnu.github.io/images/slides/direction3.png" alt="First slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/home.jpg" alt="First slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
