--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -17,15 +17,15 @@ layout: default
 			<!-- 轮播（Carousel）项目 -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="https://chaozhanghnu.github.io/images/slides/home.jpg" alt="First slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/home-lq.jpg" alt="First slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides/direction1.jpg" alt="Second slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction1-lq.jpg" alt="Second slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides/direction3.png" alt="Third slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction3-lq.jpg" alt="Third slide">
 					<div class="carousel-caption"></div>
 				</div>
 			</div>
