--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -13,6 +13,7 @@ layout: default
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				<li data-target="#myCarousel" data-slide-to="1"></li>
 				<li data-target="#myCarousel" data-slide-to="2"></li>
+				<li data-target="#myCarousel" data-slide-to="3"></li>
 			</ol>   
 			<!-- 轮播（Carousel）项目 -->
 			<div class="carousel-inner">
@@ -22,6 +23,10 @@ layout: default
 				</div>
 				<div class="item">
 					<img src="https://chaozhanghnu.github.io/images/slides/direction1-lq.jpg" alt="Second slide">
+					<div class="carousel-caption"></div>
+				</div>
+				<div class="item">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction2-lq.jpg" alt="Third slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
