--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -26,7 +26,7 @@ layout: default
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides/direction2-lq.jpg" alt="Third slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction2-lq (2).jpg" alt="Third slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
