--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -22,11 +22,11 @@ layout: default
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides/direction1-lq.jpg" alt="Second slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction1-2024.JPG" alt="Second slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides/direction2-lq (2).jpg" alt="Third slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/direction 2-2024.JPG" alt="Third slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
