--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -26,7 +26,7 @@ layout: default
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides/direction 2-2024.JPG" alt="Third slide">
+					<img src="https://chaozhanghnu.github.io/images/slides/d2-0330.png" alt="Third slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
