--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -18,19 +18,19 @@ layout: default
 			<!-- 轮播（Carousel）项目 -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="https://chaozhanghnu.github.io/images/slides-lq/home-lq.jpg" alt="First slide">
+					<img src="https://chaozhanghnu.github.io/images/slides-lq/home-lq.png" alt="First slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides-lq/direction1-2024-min.JPG" alt="Second slide">
+					<img src="https://chaozhanghnu.github.io/images/slides-lq/direction1-2024-min.png" alt="Second slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides-lq/d2-0330-min.jpg" alt="Third slide">
+					<img src="https://chaozhanghnu.github.io/images/slides-lq/d2-0330-min.png" alt="Third slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://chaozhanghnu.github.io/images/slides-lq/direction3-lq.jpg" alt="Third slide">
+					<img src="https://chaozhanghnu.github.io/images/slides-lq/direction3-lq.png" alt="Third slide">
 					<div class="carousel-caption"></div>
 				</div>
 			</div>
