--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -18,7 +18,7 @@ layout: default
 			<!-- 轮播（Carousel）项目 -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="https://chaozhanghnu.github.io/images/slides-lq/home-lq.png" alt="First slide">
+					<img src="https://chaozhanghnu.github.io/images/slides-lq/home-lq-2.jpg" alt="First slide">
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
