--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -30,7 +30,7 @@ layout: default
 					<div class="carousel-caption"></div>
 				</div>
 				<div class="item">
-					<img src="https://SMARIN-LAB.github.io/images/slides-lq/direction3-lq.png" alt="Third slide">
+					<img src="https://SMARIN-LAB.github.io/images/slides-lq/aciconference2.jpg" alt="Third slide">
 					<div class="carousel-caption"></div>
 				</div>
 			</div>
