--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
           <ul class="dropdown-menu">
             <li><a href="{{ site.url }}{{ site.baseurl }}/publications/journal-articles">Journal Articles 📝</a></li>
             <li><a href="{{ site.url }}{{ site.baseurl }}/publications/patent-applications">Patent Applications 🏷️</a></li>
-            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/selected-presentations">Selected Presentations and Technical Reports 🎤</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/selected-presentations">Presentations and Technical Reports 🎤</a></li>
             <li><a href="{{ site.url }}{{ site.baseurl }}/publications/books">Books 📚</a></li>
           </ul>
         </li>
