--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,15 +15,16 @@
         <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
         <li><a href="{{ site.url }}{{ site.baseurl }}/PI">PI</a></li>
         <li><a href="{{ site.url }}{{ site.baseurl }}/team">Group Members</a></li>
-        
-        <!-- Publications Dropdown -->
+
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Publications <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            Publications <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu">
-            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/journal-articles">Journal Articles 📝</a></li>
-            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/patent-applications">Patent Applications 🏷️</a></li>
-            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/selected-presentations">Presentations and Technical Reports 🎤</a></li>
-            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/books">Books 📚</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/journal-articles">Journal Articles</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/patent-applications">Patent Applications</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/presentations">Presentations and Technical Reports</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/books">Books</a></li>
           </ul>
         </li>
 
