--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,7 @@
         <li><a href="{{ site.url }}{{ site.baseurl }}/team">Group Members</a></li>
 
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            Publications <span class="caret"></span>
-          </a>
+          <a href="#" class="dropdown-toggle">Publications <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{ site.url }}{{ site.baseurl }}/publications/journal-articles">Journal Articles</a></li>
             <li><a href="{{ site.url }}{{ site.baseurl }}/publications/patent-applications">Patent Applications</a></li>
