--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
           <a href="#" class="dropdown-toggle">Publications <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{ site.url }}{{ site.baseurl }}/publications/journal-articles">Journal Articles</a></li>
-            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/patent-applications">Patent Applications</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/publications/patent-applications">Patents</a></li>
             <li><a href="{{ site.url }}{{ site.baseurl }}/publications/presentations">Presentations and Technical Reports</a></li>
             <li><a href="{{ site.url }}{{ site.baseurl }}/publications/books">Books</a></li>
           </ul>
