--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,8 @@
 
         <li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
         <li><a href="{{ site.url }}{{ site.baseurl }}/grants">Grants</a></li>
-       <li><a href="{{ site.url }}{{ site.baseurl }}/Sponsors-and-Collaborators">Sponsors & Collaborators</a></li>
+        <li><a href="{{ site.url }}{{ site.baseurl }}/Sponsors-and-Collaborators">Sponsors & Collaborators</a></li>
+        <li><a href="{{ site.url }}{{ site.baseurl }}/Media-Coverage">Media Coverage</a></li>
         <li><a href="{{ site.url }}{{ site.baseurl }}/pictures">Pics</a></li>
       </ul>
     </div>
